--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,17 @@
+:root {
+  --app-padding: 40px;
+}
+
 .App {
-  text-align: center;
+  background: #665948;
+  padding-left: var(--app-padding);
+  padding-right: var(--app-padding);
+  display: block;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-body {
+  max-width: 970px;
+  /* Center the page content. */
+  margin-left: auto;
+  margin-right: auto;
 }
